<resources>
    <string name="app_name">IoTApplication</string>
    <string name="bLogin">Login</string>
    <string name="tvUsername">Username</string>
    <string name="tvPassword">Password</string>
    <string name="register_here">Register Here</string>
    <string name="register">Register</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="smarthome">SmartHome</string>
    <string name="homeicon">homeIcon</string>
    <string name="backarrow">backArrow</string>
    <string name="smarticon">smartIcon</string>
    <string name="fab_light">fabLight</string>
    <string name="fab_lock">fabLock</string>
    <string name="fab_temperature">fabTemperature</string>
    <string name="fab_microphone">fabMicrophone</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="light_status">lightStatus</string>
    <string name="change_name">Change Name</string>
    <string name="confirm">Confirm</string>
    <string name="old_name">Old Name:</string>
    <string name="new_name">New Name:</string>
    <string name="name">Name</string>
</resources>