<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/tvOldName"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:text="@string/old_name"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="31dp"
        android:minHeight="48dp"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@+id/tvOldName"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

    <EditText
        android:id="@+id/etNewName"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:textColor="@color/dark_grey"
        app:layout_constraintStart_toEndOf="@+id/tvNewName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="124dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="#7B94C6"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewName" />

    <TextView
        android:id="@+id/tvNewName"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/new_name"
        android:textSize="20sp"
        android:textColor="@color/dark_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOldName" />
</androidx.constraintlayout.widget.ConstraintLayout>