<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/tvMessage"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="46dp"
        android:autofillHints=""
        android:background="#45ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/tvUsername"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="#D1CFCF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="46dp"
        android:autofillHints=""
        android:background="#45ffffff"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/tvPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="#D1CFCF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="148dp"
        android:backgroundTint="#7B94C6"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRePassword" />

    <EditText
        android:id="@+id/etRePassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="46dp"
        android:autofillHints=""
        android:background="#45ffffff"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/reenter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="#D8D8D8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="98dp"
        android:text="@string/smarthome"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smartIcon" />

    <ImageView
        android:id="@+id/smartIcon"
        android:layout_width="166dp"
        android:layout_height="148dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="123dp"
        android:contentDescription="@string/homeicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homeicon" />

    <ImageButton
        android:id="@+id/ibBackArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="325dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/backarrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRePassword"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


</androidx.constraintlayout.widget.ConstraintLayout>