<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="42dp"
        android:text="@string/smarthome"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="32dp"
        android:background="#45ffffff"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabLock" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="177dp"
        android:backgroundTint="#30FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/fab_light"
        android:elevation="0dp"
        android:focusable="true"
        android:scaleX="1.8"
        android:scaleY="1.8"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:maxImageSize="56dp"
        app:srcCompat="@drawable/light"
        app:tint="@color/white"
        app:useCompatPadding="false" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMicrophone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="178dp"
        android:backgroundTint="#30FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/fab_microphone"
        android:elevation="0dp"
        android:focusable="true"
        android:scaleX="2.3"
        android:scaleY="2.3"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage"
        app:maxImageSize="56dp"
        app:srcCompat="@drawable/microphone"
        app:tint="@color/white"
        app:useCompatPadding="false" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="#30FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/fab_lock"
        android:elevation="0dp"
        android:focusable="true"
        android:scaleX="1.8"
        android:scaleY="1.8"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toStartOf="@+id/fabTemperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:maxImageSize="56dp"
        app:srcCompat="@drawable/lock"
        app:tint="@color/white"
        app:useCompatPadding="false" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="#30FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/fab_temperature"
        android:elevation="0dp"
        android:focusable="true"
        android:scaleX="1.8"
        android:scaleY="1.8"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fabLock"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:maxImageSize="56dp"
        app:srcCompat="@drawable/temperature"
        app:tint="@color/white"
        app:useCompatPadding="false" />
</androidx.constraintlayout.widget.ConstraintLayout>